Fixes issue where the flash[:notice] display was not showing on every page.

--- a/public/stylesheets/layout/bioportal.css
+++ b/public/stylesheets/layout/bioportal.css
@@ -60,7 +60,7 @@ h1 a:hover, h2 a:hover { text-decoration:underline; }
 #hd ul.alignright li { display:inline; float:left; padding-left:15px; }
 #hd ul li a { color:#fff; }
 
-.tabs { float:left; width:100%; background:url("/images/layout/subnav_bg.png") repeat-x; height:24px; display:block; border-bottom:1px solid #bcc6d0; font-size:90%; }
+.tabs { float:left; width:100%; background:url("/images/layout/subnav_bg.png") repeat-x; height:24px; display:block; border-bottom:1px solid #bcc6d0; font-size:90%; overflow: hidden; }
 .tabs ul { margin:0; }
 .tabs li { float:left; display:inline; border-left:1px solid #bcc6d0; height:24px; }
 .tabs li:hover { background:#efefef; }
